--- a/package.json
+++ b/package.json
@@ -1,13 +1,18 @@
 {
   "name": "react-recipes",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "bootstrap": "^5.0.0",
+    "moment": "^2.29.1",
+    "nanoid": "^3.1.23",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.0.0-alpha.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
