--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "react-recipes",
   "version": "1.0.0",
   "private": true,
+  "homepage": "http://kikoano.github.io/react-recipes",
   "dependencies": {
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.0.0",
-    "gh-pages": "^3.2.0",
     "moment": "^2.29.1",
     "nanoid": "^3.1.23",
     "react": "^17.0.2",
@@ -21,7 +21,6 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "deploy": "gh-pages -b master -d build",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -41,5 +40,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.0"
   }
 }
